refactored components/serice/repository